# GMR_ROS_INTRO

./: .gitmodules  README.md
nicolas/gmr_intro/: README-en.md
nicolas/gmr_intro/launch/: gmr.launch
nicolas/gmr_intro/src/: gmr_odom_node.cpp
nicolas/gmr_intro_1/: README.md
nicolas/gmr_intro_1/launch/: primeiro.launch
nicolas/gmr_intro_2/src/: gmr_intro_2.cpp  gmr_intro_2_node.cpp
nicolas/gmr_intro_3/: README.md
nicolas/gmr_intro_poo/: CMakeLists.txt  README.md  package.xml
nicolas/gmr_intro_poo/launch/: robot.launch  robot_ds4_amr.launch
nicolas/gmr_intro_poo/src/: gmr_intro_poo.cpp
nicolas/gmr_intro_poo/vrep/: amr_full.lua  controlTypeExamples_ros.ttt
nicolas/sub_rpm/: CMakeLists.txt
nicolas/sub_rpm/launch/: second.launch
nicolas/sub_rpm/src/: sub_rpm_node.cpp
nicolas/sub_rpm2/: CMakeLists.txt
nicolas/treasure_hunt_publishers/: CMakeLists.txt
nicolas/treasure_hunt_publishers_solution/print_param_tutorial1/: CMakeLists.txt
nicolas/treasure_hunt_publishers_solution/sub_even_more_numbers/: CMakeLists.txt  package.xml
nicolas2/gmr_intro/: CMakeLists.txt  README.md  package.xml
nicolas2/gmr_intro/src/: gmr_intro_ds4_node.cpp  (+1 more)
nicolas2/gmr_intro_1/: CMakeLists.txt  package.xml
nicolas2/gmr_intro_2/: CMakeLists.txt  README.md  package.xml
nicolas2/gmr_intro_4/: README.md
nicolas2/gmr_intro_5/: README.md
nicolas2/gmr_intro_poo/: README.md
nicolas2/sub_rpm/: package.xml
nicolas2/sub_rpm2/: package.xml
nicolas2/treasure_hunt_publishers/: README.md  package.xml
nicolas2/treasure_hunt_publishers_solution/: solution.md
(+25 files in other folders)
